5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1649_1053.log
== TEST (2019-04-04 19:33:29) 
-- CODE:
x=input("Digite o patrono: ")
if(patrono.lower()==cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("nao eh patrono do Harry Potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(patrono.lower()==cervo):
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:36:09) 
-- CODE:
x=input("Digite o patrono: ")
if(patrono.lower()==cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print("nao eh patrono do Harry Potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(patrono.lower()==cervo):
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:36:24) 
-- CODE:
x=input("Digite o patrono: ")
if(patrono.lower()==cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print(x," nao eh patrono do Harry Potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(patrono.lower()==cervo):
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:36:42) 
-- CODE:
patrono=input("Digite o patrono: ")
if(patrono.lower()==cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print(x," nao eh patrono do Harry Potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(patrono.lower()==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:37:33) 
-- CODE:
patrono=input("Digite o patrono: ")
if(patrono.lower()==cervo):
	print("cervo eh patrono do Harry Potter")
else:
	print(x," nao eh patrono do Harry Potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if(patrono.lower()==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:37:51) 
-- CODE:
patrono=input("Digite o patrono: ")
if(patrono.lower()=="cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(x," nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:38:10) 
-- CODE:
patrono=input("Digite o patrono: ")
if(patrono.lower()=="cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(patrono," nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 20:38:20) 
-- CODE:
patrono=input("Digite o patrono: ")
if(patrono.lower()=="cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(patrono," nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.210848
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode  nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 13:17:13) 
-- CODE:
patrono=input("Digite o patrono: ")
if(patrono.lower()=="cervo"):
	print("cervo eh patrono do Harry Potter")
else:
	print(patrono," nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.208055
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode  nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
